--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <body>
         <header><h1>Library</h1></header>
 
+        <button class="newBook">Add new book</button>
+
+        <div class="formContainer">
+            <h2>New Book</h2>
+        </div>
+
         <div class="library"></div>
 
     </body>
