Add new book feature working

--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
 
         <button class="newBook">Add new book</button>
 
-        <div class="formContainer">
-            <h2>New Book</h2>
-        </div>
+        <div class="formContainer"></div>
 
         <div class="library"></div>
 
